# cmake_SG2

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  targets.txt
cmake/: GetCatch2.cmake  GetVDT.cmake
include/: sg2.h  sg2_constants.h  sg2_date.h  sg2_geocentric.h  sg2_geopoint.h  sg2_math.h  sg2_topocentric.h  sg2_utils.h
original/python/: pysg2.cxx
original/third-parties/python-bind-helper/: README.md  python-bind-helper.hxx  setup.py  test-python-bind-helper.cxx  test-python-bind-helper.py
resources/: load_geocentric_data.py
src/cpp/: CMakeLists.txt  sg2.cpp  sg2_date.cpp  sg2_geocentric.cpp  sg2_geocentric_data.asm  sg2_geocentric_data.hpp  sg2_geopoint.cpp  sg2_topocentric.cpp  sg2_utils.cpp  sg2_utils.h
src/cpp/util/: CMakeLists.txt  sg2_benchmark.cpp  sg2_convert_date.cpp  sg2_convert_date.cxx  sg2_query.cpp
tests/: CMakeLists.txt  print_geocentric_data.cxx  test_geocentric_data.cpp  test_vdt.cpp
